# default_midas_unpacking_pipeline_plugin

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/: LinkDef.h
include/stages/unpacking/: base_midas_unpacker_stage.h  default_midas_unpacker_stage.h
scripts/: install.sh
scripts/environment/: .env  .helpers.sh  detect_environment.sh
src/stages/unpacking/: base_midas_unpacker_stage.cpp  default_midas_unpacker_stage.cpp
